<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/dividerColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp55"
        android:orientation="horizontal"
        android:weightSum="3"
        >


        <LinearLayout
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/homeicon"
                android:layout_width="@dimen/dp20"
                android:layout_height="@dimen/dp20"
                android:src="@drawable/home"
                android:tint="@color/lightPinkColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="@color/regularTextColor"
                android:textSize="@dimen/sp13"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/gallery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/galerryicon"
                android:layout_width="@dimen/dp20"
                android:layout_height="@dimen/dp20"
                android:src="@drawable/gallery"
                android:tint="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:textColor="@color/regularTextColor"
                android:textSize="@dimen/sp13"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/story"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/storyicon"
                android:layout_width="@dimen/dp20"
                android:layout_height="@dimen/dp20"
                android:src="@drawable/story"
                android:tint="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/story"
                android:textColor="@color/regularTextColor"
                android:textSize="@dimen/sp13"/>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>