<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/greyLight"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp15"
        android:background="@android:color/white"
        android:elevation="@dimen/dp1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp10">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/userimage"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp50"
                    android:src="@drawable/userplaceholder" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp10"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:textColor="@color/textColorNormal"
                        android:textSize="@dimen/sp13"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/postdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp1"
                        android:text="Jun 18 at 05:30a.m."
                        android:textSize="@dimen/sp11" />

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/postdescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:text=""
            android:textColor="@color/textColorNormal"
            android:textSize="@dimen/sp13" />

        <RelativeLayout
            android:id="@+id/eventimagelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10">

            <ImageView
                android:id="@+id/eventimg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp10">

            <LinearLayout
                android:id="@+id/likeclick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dp2">

                <ImageView
                    android:id="@+id/likeicon"
                    android:layout_width="@dimen/dp15"
                    android:layout_height="@dimen/dp15"
                    android:src="@drawable/like"
                    android:tint="@color/heartcolor" />

                <TextView
                    android:id="@+id/liketext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp5"
                    android:text="Test, karishna and 1 other like this"
                    android:textColor="@color/regularTextColor"
                    android:textSize="@dimen/sp11" />

            </LinearLayout>

            <TextView
                android:id="@+id/commentscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/dp5"
                android:padding="@dimen/dp2"
                android:text="14 comments"
                android:textColor="@color/regularTextColor"
                android:textSize="@dimen/sp11" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:background="@color/dividerColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/likesection"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/likesrc"
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"
                    android:src="@drawable/like"
                    android:tint="@color/heartcolor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp5"
                    android:text="@string/like"
                    android:textColor="@color/textColorNormal"
                    android:textSize="@dimen/sp13"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/comments"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"
                    android:src="@drawable/comment"
                    android:tint="@color/regularTextColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp5"
                    android:text="@string/comment"
                    android:textColor="@color/textColorNormal"
                    android:textSize="@dimen/sp13"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/share"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dp20"
                    android:layout_height="@dimen/dp20"
                    android:src="@drawable/share"
                    android:tint="@color/regularTextColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp5"
                    android:text="@string/share"
                    android:textColor="@color/textColorNormal"
                    android:textSize="@dimen/sp13"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:background="@color/dividerColor" />

        <LinearLayout
            android:id="@+id/commentsection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/vewallcomment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp5"
                android:padding="@dimen/dp10"
                android:text="View All Comment"
                android:textColor="@color/textColorNormal"
                android:textSize="@dimen/sp13" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/dp10"
                android:paddingRight="@dimen/dp10">

                <LinearLayout
                    android:id="@+id/commentlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/userimagecmnt"
                        android:layout_width="@dimen/dp45"
                        android:layout_height="@dimen/dp45"
                        android:src="@drawable/male"
                        app:civ_border_width="@dimen/dp1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp8"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/user_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="-"
                                android:textColor="@color/textColorNormal"
                                android:textSize="@dimen/sp13" />

                            <TextView
                                android:id="@+id/comntdate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="@dimen/dp10"
                                android:text="1hr ago"
                                android:textColor="@color/regularTextColor"
                                android:textSize="@dimen/sp11" />
                        </RelativeLayout>

                        <TextView
                            android:id="@+id/cmmnts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/regularTextColor"
                            android:textSize="@dimen/sp12" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@+id/commentlayout"
                    android:layout_marginTop="@dimen/dp15"
                    android:background="@color/dividerColor" />
            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>